--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -6,10 +6,9 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
-      os:
-        - ubuntu-latest
-        - windows-latest
-        - macosx-latest
+      matrix:
+          os: [ubuntu-latest, windows-latest, macosx-latest]
+          
     steps:
     - uses: actions/checkout@v1
     - name: Cache choosenim
