--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,13 +1,16 @@
 name: Build and test Nim
 
-on: [push]
+on:
+  push:
+    tags:
+      - 'v*'
 
 jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-          os: [ubuntu-latest, windows-latest, macosx-latest]
+          os: [ubuntu-latest, windows-latest]
           
     steps:
     - uses: actions/checkout@v1
@@ -17,6 +20,7 @@ jobs:
       with:
         path: ~/.choosenim
         key: ${{ runner.os }}-choosenim-stable
+        
     - name: Cache nimble
       id: cache-nimble
       uses: actions/cache@v1
@@ -26,7 +30,35 @@ jobs:
     - uses: jiro4989/setup-nim-action@v1
       with:
         nim-version: 1.6.0
+        
     - name: Build
-      run: nimble build -d:release -d:ssl --threads:on -Y --verbose
+      run: |
+        nimble build -d:release -d:ssl --threads:on -Y --verbose
+        mv erocoolAPI erocoolAPI_${{ runner.os }}${{ steps.create_build.outputs.current_tag }}
+        git tag release_tag
+        git push origin release_tag
+      
     - name: Test
       run: nimble test -d:release -d:ssl --threads:on -Y --verbose
+      
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1.0.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: false
+        prerelease: false
+        
+    - name: Upload Release Asset
+      id: upload_release_asset 
+      uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./erocoolAPI_{{ runner.os }}${{ steps.create_build.outputs.current_tag }}
+        asset_name: erocoolAPI_{{ runner.os }}${{ steps.create_build.outputs.current_tag }}
+        asset_content_type: application/zip
