--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -57,6 +57,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./erocoolAPI_{{ runner.os }}${{ steps.create_build.outputs.current_tag }}
-        asset_name: erocoolAPI_{{ runner.os }}${{ steps.create_build.outputs.current_tag }}
+        asset_path: ./erocoolAPI_${{ runner.os }}${{ steps.create_build.outputs.current_tag }}
+        asset_name: erocoolAPI_${{ runner.os }}${{ steps.create_build.outputs.current_tag }}
         asset_content_type: application/octet-stream
