--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -58,7 +58,7 @@ jobs:
         
     - name: Upload Linux Release Asset
       id: upload_linux_release_asset
-      if: ${{ runner.os }} == 'Linux'
+      if: runner.os == 'Linux'
       uses: actions/upload-release-asset@v1.0.1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -70,7 +70,7 @@ jobs:
         
     - name: Upload Windows Release Asset
       id: upload_windows_release_asset
-      if: ${{ runner.os }} == 'Windows'
+      if: runner.os == 'Windows'
       uses: actions/upload-release-asset@v1.0.1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
