--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -47,6 +47,7 @@ jobs:
       
     - name: Create Release
       id: create_release
+      if: runner.os == 'Linux'
       uses: actions/create-release@v1.0.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
