--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -35,18 +35,18 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         nimble build -d:release -d:ssl --threads:on -Y --verbose
-        zip --junk-paths erocoolAPI_${{ runner.os }}${{ steps.create_build.outputs.current_tag }}.zip erocoolAPI 
+        zip --junk-paths erocoolAPI_${{ runner.os }}.zip erocoolAPI 
 
     - name: Windows Build
       if: runner.os == 'Windows'
       run: |
         nimble build -d:release -d:ssl --threads:on -Y --verbose
-        powershell Compress-Archive -Path erocoolAPI.exe -DestinationPath erocoolAPI_${{ runner.os }}${{ steps.create_build.outputs.current_tag }}.zip
+        powershell Compress-Archive -Path erocoolAPI.exe -DestinationPath erocoolAPI_${{ runner.os }}.zip
 
     - uses: actions/upload-artifact@v2
       with:
         name: build-${{ matrix.target }}
-        path: erocoolAPI_${{ runner.os }}${{ steps.create_build.outputs.current_tag }}.zip
+        path: erocoolAPI_${{ runner.os }}.zip
   create-release:
     needs: [build]
     runs-on: ubuntu-latest
@@ -88,6 +88,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.upload-url.outputs.url }}
-        asset_path: ./erocoolAPI_${{ matrix.target }}${{ steps.create_build.outputs.current_tag }}.zip
-        asset_name: erocoolAPI_${{ matrix.target }}${{ steps.create_build.outputs.current_tag }}.zip
+        asset_path: ./erocoolAPI_${{ matrix.target }}.zip
+        asset_name: erocoolAPI_${{ matrix.target }}.zip
         asset_content_type: application/zip
