--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -47,8 +47,9 @@ jobs:
 
     - uses: actions/upload-artifact@v2
       with:
-        name: build-${{ matrix.target }}
+        name: build-${{ runner.os }}
         path: erocoolAPI_${{ runner.os }}.zip
+
   create-release:
     needs: [build]
     runs-on: ubuntu-latest
@@ -84,12 +85,12 @@ jobs:
         echo "::set-output name=url::$(cat create-release/release_upload_url.txt)"
     - uses: actions/download-artifact@v1
       with:
-        name: build-${{ matrix.target }}
+        name: build-${{ matrix.os }}
     - uses: actions/upload-release-asset@v1.0.1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.upload-url.outputs.url }}
-        asset_path: ./erocoolAPI_${{ matrix.target }}.zip
-        asset_name: erocoolAPI_${{ matrix.target }}.zip
+        asset_path: ./erocoolAPI_${{ matrix.os }}.zip
+        asset_name: erocoolAPI_${{ matrix.os }}.zip
         asset_content_type: application/zip
