--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -73,7 +73,7 @@ jobs:
   upload-release-asset:
     strategy:
       matrix:
-          os: [ubuntu-latest, windows-latest]
+          os: [Linux, Windows]
     needs: [create-release]
     runs-on: ubuntu-latest
     steps:
