--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -73,7 +73,7 @@ jobs:
   upload-release-asset:
     strategy:
       matrix:
-          os: ['Linux', 'Windows']
+          os: [Linux, Windows]
     needs: [create-release]
     runs-on: ubuntu-latest
     steps:
@@ -91,6 +91,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.upload-url.outputs.url }}
-        asset_path: ./erocoolAPI_${{ matrix.os }}.zip
+        asset_path: ./build-${{ matrix.os }}/erocoolAPI_${{ matrix.os }}.zip
         asset_name: erocoolAPI_${{ matrix.os }}.zip
         asset_content_type: application/zip
